feat: 4.3강 강의 내용 실습

--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>One Shot</title>
+    <title>DOM Tree</title>
   </head>
 
   <body>
-    <div>hello world!</div>
+    <div class="animal-info">
+      <div class="info-item" id="name">강아지</div>
+      <div class="info-item" id="color">갈색</div>
+      <div class="info-item" id="age">2살</div>
+    </div>
+
     <script src="./src/index.js"></script>
   </body>
 </html>
